fix: 🐛 make menu section header condiontionally render

--- a/design-toolkit/components/src/components/menu/menu.docs.mdx
+++ b/design-toolkit/components/src/components/menu/menu.docs.mdx
@@ -18,7 +18,7 @@ It is composed of the following elements:
 - **Menu.Item.Label** - item display label
 - **Menu.Item.Description** - item description subtext
 - **Menu.Separator** - creates a line separator to denote a visual break
-- **Menu.Section** - creates a visually distinct section with a header
+- **Menu.Section** - creates a visually distinct section with a title
 - **Menu.Submenu** - opens a submenu flyout to navigate hierarchical items
 
 Additionally, you can compose in a `Hotkey` component or `Icon` component as additional elements.
@@ -59,7 +59,7 @@ You can add an optional section area.
       <Menu.Item>
         <Menu.Item.Label>Item</Menu.Item.Label>
       </Menu.Item>
-      <Menu.Section header='Additional Notable Species'>
+      <Menu.Section title='Additional Notable Species'>
         <Menu.Item>
           <Menu.Item.Label>Mallard</Menu.Item.Label>
           <Menu.Item.Description>Anas platyrhynchos</Menu.Item.Description>
