fix: edit avatar

--- a/design-toolkit/components/src/components/avatar/avatar.docs.mdx
+++ b/design-toolkit/components/src/components/avatar/avatar.docs.mdx
@@ -5,9 +5,9 @@ import * as AvatarStories from './avatar.stories';
 <Meta of={AvatarStories} />
 
 # Avatar
-The Avatar component displays a user's profile picture, initials, or a fallback icon. It's built on Radix UI and provides excellent accessibility out of the box. Avatars are commonly used in user interfaces to represent users, display profile pictures, show online status, and provide visual identification in lists, headers, and user management systems.
+The Avatar component displays a user's profile picture, initials, or a fallback icon. Avatars are commonly used in user interfaces to represent users, display profile pictures, show online status, and provide visual identification in lists, headers, and user management systems.
 
-## Example usage
+## Basic Usage
 ```tsx
 // Basic avatar with image
 <Avatar
@@ -16,16 +16,11 @@ The Avatar component displays a user's profile picture, initials, or a fallback 
     src: "https://example.com/avatar.jpg"
   }}
 />
+```
+<Canvas of={AvatarStories.Default} />
 
-// Avatar with custom size
-<Avatar
-  size="small"
-  imageProps={{
-    alt: "Small avatar",
-    src: "https://example.com/avatar.jpg"
-  }}
-/>
-
+## With Badge
+```tsx
 // Avatar with badge content
 <Avatar
   imageProps={{
@@ -35,28 +30,11 @@ The Avatar component displays a user's profile picture, initials, or a fallback 
 >
   <Badge variant="critical">99+</Badge>
 </Avatar>
+```
+<Canvas of={AvatarStories.WithBadge} />
 
-// Avatar with custom content
-<Avatar
-  imageProps={{
-    alt: "User with status",
-    src: "https://example.com/avatar.jpg"
-  }}
->
-  <span className="fg-interactive-default">DS</span>
-</Avatar>
-
-// Avatar with fallback when image fails to load
-<Avatar
-  imageProps={{
-    alt: "User initials",
-    src: "http://broken-url.com/avatar.jpg"
-  }}
-  fallbackProps={{
-    children: "JD"
-  }}
-/>
-
+## With Fallback
+```tsx
 // Avatar with icon fallback
 <Avatar
   imageProps={{
@@ -67,26 +45,18 @@ The Avatar component displays a user's profile picture, initials, or a fallback 
     children: <Icon><Person /></Icon>
   }}
 />
-
-// Using context provider for default props
-<Avatar.Provider size="small">
-  <Avatar imageProps={{ alt: "User 1", src: "avatar1.jpg" }} />
-  <Avatar imageProps={{ alt: "User 2", src: "avatar2.jpg" }} />
-</Avatar.Provider>
 ```
+<Canvas of={AvatarStories.WithFallback} />
 
 ## Variants
-
 * **Medium** - standard size (32px) with larger text (default)
 * **Small** - compact size (24px) with smaller text for space-constrained layouts
 
 The size can be controlled via the `size` prop or set globally using the `Avatar.Provider` component.
 
-<Canvas of={AvatarStories.Default} />
-
 ## Props
+All components and subcomponents accept either a `className` or a `classNames` prop that allow for custom style overrides. The `className` prop takes a string and `classNames` takes an object when there are multiple targets.
 
-* **`size`** - Size variant: `'medium'` (default) or `'small'`
 * **`imageProps`** - Props passed to the image element:
   * `src` - Image source URL
   * `alt` - Alternative text for accessibility
@@ -110,25 +80,19 @@ The component accepts all standard HTML span attributes and forwards them to the
 ### Avatar.Provider
 Context provider component that allows setting default props for multiple Avatar components. Useful for maintaining consistent sizing across a group of avatars.
 
+#### Example usage
+```tsx
+// Using context provider for default props
+<Avatar.Provider size="small">
+  <Avatar imageProps={{ alt: "User 1", src: "avatar1.jpg" }} />
+  <Avatar imageProps={{ alt: "User 2", src: "avatar2.jpg" }} />
+</Avatar.Provider>
+```
+
 ### Avatar
 The main avatar component that renders the profile picture, fallback, and optional overlay content.
 
 ## Implementation Notes
 The `Avatar` component wraps the `Avatar`, `Image`, and `Fallback` components from `@radix-ui/react-avatar`. [Docs](https://www.radix-ui.com/primitives/docs/components/avatar)
 
-The underlying elements are:
-- `span` for the avatar container with role="img"
-- `img` for the profile picture
-- `span` for the fallback content (initials or icon)
-- `span` for the overlay content (badges, status indicators)
-
-The component automatically handles accessibility features including:
-- ARIA attributes for screen readers
-- Proper role="img" for image representation
-- Fallback content when images fail to load
-- Alt text support for screen readers
-- Keyboard navigation support
-
-The component includes responsive sizing that adapts to different size variants, with appropriate text sizing and spacing. The avatar uses CSS Grid for precise positioning of the image, fallback, and content overlay. The fallback automatically displays when an image fails to load, and the component integrates seamlessly with the Badge component for status indicators and notifications.
-
-The avatar automatically scales icons and content based on the selected size variant, ensuring consistent visual hierarchy across different use cases.
+The avatar uses CSS Grid for precise positioning of the image, fallback, and content overlay. The fallback automatically displays when an image fails to load, and the component integrates seamlessly with the Badge component for status indicators and notifications.
