fix: more accordion edits

--- a/design-toolkit/components/src/components/accordion/accordion.docs.mdx
+++ b/design-toolkit/components/src/components/accordion/accordion.docs.mdx
@@ -7,9 +7,18 @@ import * as AccordionStories from './accordion.stories';
 # Accordion
 The Accordion component provides a collapsible content section that can expand and collapse to show or hide content. Accordions are commonly used in navigation menus, FAQ sections, settings panels, and anywhere you need to organize content into expandable sections to save space and improve readability.
 
-## Basic Usage
+It is composed of the following components:
+
+- **[Accordion.Group](?path=/docs/components-accordion-group--playground)** - Container component that groups multiple accordions together and provides shared configuration like variant and multiple expansion behavior.
+- **Accordion** - Main accordion component that manages the expand/collapse state and renders the header and panel.
+- **Accordion.Header** - Container for the accordion trigger and any additional header elements like menus or action buttons.
+- **Accordion.Trigger** - Button that controls the expand/collapse state.
+- **Accordion.Panel** - Collapsible content container that shows/hides based on the accordion's expanded state.
+
+## Example Usage
+
+### Basic
 ```tsx
-// Basic accordion
 <Accordion>
   <Accordion.Header>
     <Accordion.Trigger>
@@ -22,12 +31,11 @@ The Accordion component provides a collapsible content section that can expand a
   </Accordion.Panel>
 </Accordion>
 ```
-
 <Canvas of={AccordionStories.Default} />
 
-## With Menu in Header
-```
-// Accordion with menu in header
+### With Menu
+The accordion supports an optional [Menu](?path=/docs/components-menu--playground).
+```tsx
 <Accordion>
   <Accordion.Header>
     <Accordion.Trigger>
@@ -47,7 +55,6 @@ The Accordion component provides a collapsible content section that can expand a
   </Accordion.Panel>
 </Accordion>
 ```
-
 <Canvas of={AccordionStories.WithMenu} />
 
 ## Variants
@@ -56,26 +63,24 @@ The Accordion component provides a collapsible content section that can expand a
 
 The variant can be controlled via the `variant` prop on individual accordions or set globally using the `Accordion.Group` component.
 
-```
-<Accordion variant="compact">
-  <Accordion.Header>
-    <Accordion.Trigger>
-      <Icon><Info /></Icon>
-      Compact accordion
-    </Accordion.Trigger>
-  </Accordion.Header>
-  <Accordion.Panel>
-    <p>Compact variant with smaller text and spacing.</p>
-  </Accordion.Panel>
-</Accordion>
-```
-
 ## Props
 All components and subcomponents accept either a `className` or a `classNames` prop that allow for custom style overrides. The `className` prop takes a string and `classNames` takes an object when there are multiple targets.
 
-### Accordion Props
 The Accordion supports all the `Disclosure` [props and events from `react-aria-components`](https://react-spectrum.adobe.com/react-aria/Disclosure.html#disclosure-1) and
 * **`variant`** - Visual style: `'cozy'` (default) or `'compact'`
+
+### RenderProps Pattern
+
+The `Accordion` component accepts `ReactNode` children or a function that returns a `ReactNode`. For details of what information is available in the renderProps object, print out the props or [review the source code](https://github.com/adobe/react-spectrum/blob/7ee8d64207cb0777cd07fa98d398e1cf7cd80d3d/packages/react-aria-components/src/Disclosure.tsx#L73C18-L73C39).
+
+```tsx
+<Accordion>
+  {(renderProps) => {
+    console.log(renderProps);
+    return (<>...//</>);
+  }}
+</Accordion>
+```
 
 ### Accordion.Header Props
 * **`children`** - Must contain an `Accordion.Trigger` and optionally other elements like menus
@@ -89,17 +94,6 @@ The Accordion supports all the `Disclosure` [props and events from `react-aria-c
 ### Accordion.Panel Props
 * **`children`** - The content to display when expanded
 * **`className`** - Additional CSS classes for custom styling
-
-## Subcomponents
-- **[Accordion.Group](?path=/docs/components-accordion-group--playground)** - Container component that groups multiple accordions together and provides shared configuration like variant and multiple expansion behavior.
-
-- **Accordion** - Main accordion component that manages the expand/collapse state and renders the header and panel.
-
-- **Accordion.Header** - Container for the accordion trigger and any additional header elements like menus or action buttons.
-
-- **Accordion.Trigger** - Button that controls the expand/collapse state.
-
-- **Accordion.Panel** - Collapsible content container that shows/hides based on the accordion's expanded state.
 
 ## Implementation Notes
 The `Accordion` component wraps the `Disclosure` component from `react-aria-components`. [Disclosure Docs](https://react-spectrum.adobe.com/react-spectrum/Disclosure.html)
