fix: additional edits

--- a/design-toolkit/components/src/components/accordion/accordion-group.docs.mdx
+++ b/design-toolkit/components/src/components/accordion/accordion-group.docs.mdx
@@ -7,6 +7,8 @@ import * as AccordionGroupStories from './accordion-group.stories';
 The Accordion Group component combines provides a convenient grouping for Accordion components. Use this component when you need a series of related Accordions that all track together in size and behavior. It supports both single and multiple expanded items.
 
 ## Example usage
+
+### Basic
 ```tsx
 // Accordion group with multiple items
 <Accordion.Group allowsMultipleExpanded={true}>
